# test

./: CMakeLists.txt  README.md
components/I2C_driver_master_top/: CMakeLists.txt  I2C_driver_master_top.c  I2C_driver_master_top.h
components/UDP/: CMakeLists.txt  UDP.c  UDP.h
components/apptask/: CMakeLists.txt  UDP.h  apptask.c  apptask.h  mpu9250_dri.h  soft_i2c.h  wifi.h
components/mpu9250_dri/: CMakeLists.txt  I2C_driver_master_top.h  mpu9250_dri.c  mpu9250_dri.h  soft_i2c.h
components/soft_i2c/: CMakeLists.txt  soft_i2c.c  soft_i2c.h
components/wifi/: CMakeLists.txt  wifi.c  wifi.h
main/: main.c
